2002-09-20  Michael Meeks  <michael@ximian.com>

	* corba-sheet.c: re-hash to use BonoboObject.

2002-09-19  Jody Goldberg <jody@gnome.org>

	* corba-application.c : move init into a 'general' service so that
	  things do not complain.

2002-09-18  Jody Goldberg <jody@gnome.org>

	* New module to re-enable a CORBA interface in a plugin now that it is
	  possible to do it without making a mess in the core.  Untested and
	  many methods are incomplete but the frame work is mostly in place.
