@@ -2,6 +2,8 @@
 
 	* corba-sheet.c: re-hash to use BonoboObject.
 
+	* corba-application.c: ditto.
+
 2002-09-19  Jody Goldberg <jody@gnome.org>
 
 	* corba-application.c : move init into a 'general' service so that
